connected profile to backend

--- a/amplify/backend/auth/slidevlogsb7cef162/slidevlogsb7cef162-cloudformation-template.yml
+++ b/amplify/backend/auth/slidevlogsb7cef162/slidevlogsb7cef162-cloudformation-template.yml
@@ -114,10 +114,6 @@ Parameters:
   
             
         
-  usernameAttributes:
-    Type: CommaDelimitedList
-      
-        
   userPoolGroupList:
     Type: CommaDelimitedList
       
@@ -148,7 +144,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'slidevc3227e37_sns-role', !Join ['',[ 'sns', 'c3227e37', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'slidevb7cef162_sns-role', !Join ['',[ 'sns', 'b7cef162', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -160,10 +156,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: slidevc3227e37_role_external_id
+                sts:ExternalId: slidevb7cef162_role_external_id
       Policies:
         -
-          PolicyName: slidevc3227e37-sns-policy
+          PolicyName: slidevb7cef162-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -209,14 +205,12 @@ Resources:
           RequireSymbols: false
           RequireUppercase: false
       
-      UsernameAttributes: !Ref usernameAttributes
-      
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsAuthenticationMessage: !Ref smsAuthenticationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: slidevc3227e37_role_external_id
+        ExternalId: slidevb7cef162_role_external_id
     
   
   UserPoolClientWeb:
@@ -224,7 +218,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: slidevc3227e37_app_clientWeb
+      ClientName: slidevb7cef162_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -234,7 +228,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: slidevc3227e37_app_client
+      ClientName: slidevb7cef162_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -245,7 +239,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'c3227e37', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'b7cef162', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -299,7 +293,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: slidevc3227e37_userpoolclient_lambda_iam_policy
+      PolicyName: slidevb7cef162_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -316,7 +310,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: slidevc3227e37_userpoolclient_lambda_log_policy
+      PolicyName: slidevb7cef162_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -356,7 +350,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'slidevlogsc3227e37_identitypool_c3227e37', !Join ['',['slidevlogsc3227e37_identitypool_c3227e37', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'slidevlogsb7cef162_identitypool_b7cef162', !Join ['',['slidevlogsb7cef162_identitypool_b7cef162', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
