--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -18,7 +18,7 @@
     }
   },
   "auth": {
-    "slidevlogsc3227e37": {
+    "slidevlogsb7cef162": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
